[package]
name = "pcyw-salvo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
chrono = { version = "0.4.35", features = ["serde"] }
dotenv = "0.15.0"
jsonwebtoken = "9.0.0"
once_cell = "1.19.0"
salvo = { version = "0.74.2", features = ["affix-state", "cors"] }
serde = "1.0.197"
sqlx = { version = "0.8.1", features = ["postgres", "runtime-tokio", "chrono"] }
strum = { version = "0.26.2" }
time = "0.3.34"
tokio = { version = "1.36.0", features = ["macros"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
reqwest = { version = "0.12.5", features = ["json"] }
serde_json = "1.0"
async-stream = "0.3.5"
thiserror = "1"
log = "0.4.22"

[profile.dev]
opt-level = 0
codegen-units = 16
lto = false
incremental = true
overflow-checks = true
panic = 'unwind'
